# wave-model

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
docs/: CMakeLists.txt
docs/html/: abstract__executor_8h.html  abstract__executor_8h__dep__incl.map  abstract__executor_8h__dep__incl.md5  abstract__executor_8h__incl.map  abstract__executor_8h__incl.md5  abstract__executor_8h_source.html  abstract__grid_8h.html  abstract__grid_8h__dep__incl.map  abstract__grid_8h__dep__incl.md5  abstract__grid_8h__incl.map  abstract__grid_8h__incl.md5  abstract__grid_8h_source.html  abstract__node_8h.html  abstract__node_8h__dep__incl.map  abstract__node_8h__dep__incl.md5  abstract__node_8h_source.html  annotated.html  avx__axis__basic__wave__stencil2d_8h_source.html  avx__quad__basic__wave__stencil2d_8h_source.html  basic__wave__stencil2d_8h_source.html  classes.html  classwave__model_1_1WmAbstractExecutor-members.html  classwave__model_1_1WmAbstractExecutor.html  classwave__model_1_1WmAbstractExecutor__inherit__graph.map  classwave__model_1_1WmAbstractExecutor__inherit__graph.md5  classwave__model_1_1WmAbstractGrid-members.html  classwave__model_1_1WmAbstractGrid.html  classwave__model_1_1WmAbstractGrid__inherit__graph.map  classwave__model_1_1WmAbstractGrid__inherit__graph.md5  classwave__model_1_1WmAbstractNode-members.html  classwave__model_1_1WmAbstractNode.html  classwave__model_1_1WmAbstractNode__inherit__graph.map  classwave__model_1_1WmAbstractNode__inherit__graph.md5  classwave__model_1_1WmAvxAxisBasicWaveStencil2D-members.html  classwave__model_1_1WmAvxAxisBasicWaveStencil2D.html  classwave__model_1_1WmAvxQuadBasicWaveStencil2D-members.html  classwave__model_1_1WmAvxQuadBasicWaveStencil2D.html  classwave__model_1_1WmBasicWaveStencil2D-members.html  classwave__model_1_1WmBasicWaveStencil2D.html  classwave__model_1_1WmConeFoldGrid2D-members.html  (+235 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: core.h  (+2 more)
src/plane/: CMakeLists.txt  general_solver2d.h  main.cpp  openmp_solver2d.h  parallel_solver2d.h  solver2d.h
src/plane/layer/: avx_layer2d.h  avx_linear_layer2d.h  general_linear_layer2d.h  general_zcurve_layer2d.h  linear_layer2d.h  zcurve_layer2d.h
src/plane/logging/: bench.h  logger.h  macro.h
src/plane/memory/: aligned_allocator.h
src/plane/parallel/: abstract_executor.h  abstract_grid.h  abstract_node.h  conefold_grid2d.h  conefold_node2d.h  counting_semaphore.h  grid_graph.h  openmp_mutex.h  sequential_executor.h  thread_pool.h  thread_pool_executor.h
src/plane/script/: benchmark.py
src/plane/stencil/: avx_axis_basic_wave_stencil2d.h  avx_basic_wave_stencil2d.h  avx_quad_basic_wave_stencil2d.h  basic_wave_stencil2d.h
src/plane/tiling/: conefold_tiling2d.h  general_conefold_tiling2d.h  general_diamondtorre_tiling2d.h  general_diamondtorre_tiling2d_loop.h  general_regular_tiling2d.h  typed_conefold_tiling2d.h
src/plane/wave/: cosine_hat_wave2d.h  (+1 more)
(+42 files in other folders)
